package ex02.movieApp001;

public class Customer {
}
