package ex02.movieApp001;

public interface DiscountCondition {
    boolean isSatisfiedBy(Screening screening);
}
